RMX1971: Add kcal to KharaMeParts
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: MadhavSaladi <baaswanthmadhav@gmail.com>
Signed-off-by: KrishWalecha <Krishwalecha098@gmail.com>

--- a/KharaMeParts/res/values/strings.xml
+++ b/KharaMeParts/res/values/strings.xml
@@ -171,4 +171,18 @@
     <!-- Vibration Slider -->
     <string name="vibrator_intensity_control">Vibration control</string>
 
+    <!-- Kcal -->
+    <string name="kcal">Display</string>
+    <string name="kcal_title">Display color control</string>
+    <string name="kcal_summary">Display color calibration using KCAL</string>
+    <string name="kcal_enabled_title">Enable KCAL</string>
+    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
+    <string name="kcal_red">Red</string>
+    <string name="kcal_green">Green</string>
+    <string name="kcal_blue">Blue</string>
+    <string name="kcal_saturation">Saturation</string>
+    <string name="kcal_contrast">Constrast</string>
+    <string name="menu_reset">Reset</string>
+    <string name="kcal_color_temp">Color temperature (K)</string>
+
 </resources>
